Change feeds update frequency from the settings page

--- a/locale/fr.json
+++ b/locale/fr.json
@@ -3,5 +3,18 @@
  "SMARTFEEDUPDATE_SMART_DESC": "La mise à jour des flux s'effectuera en fonction de la fréquence de leurs publications. Pour utiliser ce type de synchronisation, il est recommandé de lancer le cron fréquemment (toutes les 4 minutes). Et ça, c'est <a href=\"http://fr.wikipedia.org/wiki/Cyril_Lignac\">malin</a> !",
  "SMARTFEEDUPDATE_NO_FEED_TO_UPDATE": "Aucun flux à mettre à jour.",
  "SMARTFEEDUPDATE_NO_FREQUENCIES_SAVED": "La fréquence des flux n'a pas été sauvegardée.",
- "SMARTFEEDUPDATE_NO_ACTION_DETECTED": "Aucune action n'a été détectée."
+ "SMARTFEEDUPDATE_NO_ACTION_DETECTED": "Aucune action n'a été détectée.",
+ "SMARTFEEDSUPDATE_SMART": "Malin",
+ "SMARTFEEDSUPDATE_SMART_DESC": "La mise à jour des flux s'effectuera en fonction de la fréquence de leurs publications. Pour utiliser ce type de synchronisation, il est recommandé de lancer le cron fréquemment (toutes les 4 minutes). Et ça, c'est <a href=\"http://fr.wikipedia.org/wiki/Cyril_Lignac\">malin</a> !",
+ "SMARTFEEDSUPDATE_NO_FEED_TO_UPDATE": "Aucun flux à mettre à jour.",
+ "SMARTFEEDSUPDATE_NO_FREQUENCIES_SAVED": "La fréquence des flux n'a pas été sauvegardée.",
+ "SMARTFEEDSUPDATE_NO_ACTION_DETECTED": "Aucune action n'a été détectée.",
+ "SMARTFEEDSUPDATE_SETTINGS": "Paramètres de la mise à jour maline des flux",
+ "SMARTFEEDSUPDATE_FREQUENCY_NOTIFICATION": "Le titre de chacun de ces blocs indique la fréquence à laquelle les flux en dessous seront mis à jour.",
+ "SMARTFEEDSUPDATE_MN": "minute",
+ "SMARTFEEDSUPDATE_MNS": "minutes",
+ "SMARTFEEDSUPDATE_HOUR": "heure",
+ "SMARTFEEDSUPDATE_HOURS": "heures",
+ "SMARTFEEDSUPDATE_DAY": "jour",
+ "SMARTFEEDSUPDATE_DAYS": "jours"
 }
