--- a/locale/en.json
+++ b/locale/en.json
@@ -3,5 +3,13 @@
  "SMARTFEEDUPDATE_SMART_DESC": "The update will process feeds depending on their publication's frequency. To use this type of synchronization, we recommend to launch the cron frequently (every 4 minutes).",
  "SMARTFEEDUPDATE_NO_FEED_TO_UPDATE": "No feed to update.",
  "SMARTFEEDUPDATE_NO_FREQUENCIES_SAVED": "Feeds' frequency were not saved.",
- "SMARTFEEDUPDATE_NO_ACTION_DETECTED": "No action detected."
+ "SMARTFEEDUPDATE_NO_ACTION_DETECTED": "No action detected.",
+ "SMARTFEEDSUPDATE_SETTINGS": "Smart feeds update settings",
+ "SMARTFEEDSUPDATE_FREQUENCY_NOTIFICATION": "Blocks' title indicate the update frequency of the feeds located below.",
+ "SMARTFEEDSUPDATE_MN": "minute",
+ "SMARTFEEDSUPDATE_MNS": "minutes",
+ "SMARTFEEDSUPDATE_HOUR": "hour",
+ "SMARTFEEDSUPDATE_HOURS": "hours",
+ "SMARTFEEDSUPDATE_DAY": "day",
+ "SMARTFEEDSUPDATE_DAYS": "days"
 }
