--- a/locale/en.json
+++ b/locale/en.json
@@ -11,5 +11,8 @@
  "SMARTFEEDSUPDATE_HOUR": "hour",
  "SMARTFEEDSUPDATE_HOURS": "hours",
  "SMARTFEEDSUPDATE_DAY": "day",
- "SMARTFEEDSUPDATE_DAYS": "days"
+ "SMARTFEEDSUPDATE_DAYS": "days",
+ "SMARTFEEDSUPDATE_NO_FREQUENCIES_SAVED": "No frequencies saved.",
+ "SMARTFEEDSUPDATE_NO_FEED_TO_UPDATE": "No feed to update.",
+ "SMARTFEEDSUPDATE_NO_ACTION_DETECTED": "No action detected."
 }
